--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -18,7 +18,7 @@
         <div class="col-lg-12">
             <h5>
               <a href="{% url 'journal:entry_update' entry.uuid %}" class="entry-link"><i class="far fa-edit"></i> Edit</a>
-              <a href="{% url 'journal:entry_delete' entry.uuid %}" class="entry-link text-link ml-3"><i class="far fa-trash-alt"></i> Delete</a>
+              <button type="submit" value="1" class="btn btn-danger" onclick="return EntryDeleteConfirmAction('Are you sure you want to remove this entry?', '{{ entry.pk }}')"><i class="far fa-trash-alt"> Delete</i></button>
             </h5>
         </div>
       </div>
