--- a/journal_app/templates/journal/contact_entry_list.html
+++ b/journal_app/templates/journal/contact_entry_list.html
@@ -31,6 +31,9 @@
     </div>
     <div class="row">
       <div class="col-lg-12 mw-100">
+        {% if entry.public %}
+          <i class="fas fa-users small yellow"></i> For All Contacts
+        {% endif %}
         {{ entry.body|safe|truncatewords:75 }}
       </div>
     </div>
