--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -29,7 +29,7 @@
           {% endif %}
         </td>
         <td class="text-center align-middle">
-          <button type="submit" value="1" class="btn btn-danger" onclick="return ContactDeleteConfirmAction('Are you sure you want to remove {{ contact.name }}?', '{{ contact.pk }}')"><i class="far fa-trash-alt"> Delete</i></button>
+          <button type="submit" value="1" class="btn btn-danger" onclick="return ContactDeleteConfirmAction('Are you sure you want to remove {{ contact.name }}?\n(This will keep your entries)', '{{ contact.pk }}')"><i class="far fa-trash-alt"> Delete</i></button>
         </td>
       </tr>
 
