--- a/journal_app/templates/account/email/welcome_email.html
+++ b/journal_app/templates/account/email/welcome_email.html
@@ -9,5 +9,5 @@ Thanks for joining!
 {% endblock %}
 
 {% block content %}
-  Welcome {{ user.username }}.  Thank you for joining the site!  Please visit our tutorial page to see how it works.
+  Welcome {{ user }}.  Thank you for joining the site!  Please visit our tutorial page to see how it works.
 {% endblock %}
