--- a/journal_app/templates/account/email/email_confirmation_message.html
+++ b/journal_app/templates/account/email/email_confirmation_message.html
@@ -13,7 +13,7 @@ Confirm email
 {% block content %}
   {% autoescape off %}
     {% user_display user as user_display %}
-    {% blocktrans with site_name=current_site.name site_domain=current_site.domain %} You're receiving this e-mail because user {{ user_display }} has given your e-mail address to register an account on {{ site_domain }}.<br/>
+    {% blocktrans with site_name=current_site.name site_domain=current_site.domain %} You're receiving this e-mail because user {{ user.username }} has given your e-mail address to register an account on Time Capsule Journal.<br/>
       To confirm this is correct, go to {{ activate_url }}
     {% endblocktrans %}
   {% endautoescape %}
