--- a/journal_app/templates/journal/contact_form.html
+++ b/journal_app/templates/journal/contact_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags static %}
 
 {% block title %}{{ view.action|default:'Add' }} Contact{% endblock %}
 
@@ -9,8 +9,16 @@
   <h1>{{ action }} Contact</h1>
   <form method="post" action=".">
     {% csrf_token %}
-    {{ form|crispy }}
+    {{ form.name|as_crispy_field }}
+    <p>Enter at least one of the following:</p>
+    {{ form.email|as_crispy_field }}
+    {{ form.phone|as_crispy_field }}
+
     <button type="submit" class="btn btn-theme">Save</button>
   </form>
   {% endwith %}
+{% endblock %}
+
+{% block extra_css %}
+  <link href="{% static 'css/days_to_release_settings.css' %}" rel="stylesheet">
 {% endblock %}
