--- a/journal_app/templates/journal/contact_entry_list.html
+++ b/journal_app/templates/journal/contact_entry_list.html
@@ -32,7 +32,7 @@
     <div class="row">
       <div class="col-lg-12 mw-100">
         {% if entry.public %}
-          <i class="fas fa-users small yellow"></i> For All Contacts
+          <i class="fas fa-users small yellow"></i> All Contacts
         {% endif %}
         {{ entry.body|safe|truncatewords:75 }}
       </div>
