--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -1,4 +1,5 @@
 {%  extends 'base.html' %}
+{% load humanize %}
 
 {% block title %}Journal Entry List{% endblock %}
 
@@ -26,6 +27,9 @@
         <div class="col-lg-12 mw-100">
           {% if entry.public %}
             <i class="fas fa-users small yellow"></i> All Contacts
+          {% endif %}
+          {% if entry.is_scheduled %}
+            <i class="far fa-calendar-check"></i> Scheduled: {{ entry.scheduled_time|naturalday }}
           {% endif %}
           {{ entry.body|safe|truncatewords:75 }}
         </div>
