Added customer portal link

--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -9,7 +9,9 @@
       <h5>{{ user.subscription.get.product_name }}</h5>
       <p>Subscription ends: {{ user.subscription.get.subscription_end|date:"SHORT_DATE_FORMAT" }}</p>
     {% else %}
-      <button type="submit" class="btn btn-large btn-block btn-theme" id="submitBtn">Subscribe</button>
+      <form method="POST" action="/create-customer-portal-session">
+        <button type="btn btn-submit">Manage billing</button>
+      </form>
     {% endif %}
   </div>
 {% endblock %}
