added subscription page

--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -16,7 +16,7 @@
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4 box-shadow">
             <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Free</h4>
+              <h4 class="my-0 font-weight-normal">Trial</h4>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
