--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -4,74 +4,79 @@
 {% block title %}Subscriptions{% endblock %}
 
 {% block content %}
-  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">
-      {% if customer.status == 'active' %}
-        <h1 class="display-4">Subscriptions</h1>
-        <p class="lead">Manage your subscription</p>
-      {% else %}
-        <h1 class="display-4">Pricing</h1>
-      {% endif %}
-      <div class="container">
-        <div class="card-deck mb-3 text-center">
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    {% if customer.status == 'active' %}
+      <h1 class="display-4">Subscriptions</h1>
+      <p class="lead">Manage your subscription</p>
+    {% else %}
+      <h1 class="display-4">Pricing</h1>
+      <p class="lead">Sign up now for a special founder's discount</p>
+    {% endif %}
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        {% if customer.status == "trial" %}
           <div class="card mb-4 box-shadow">
             <div class="card-header">
               <h4 class="my-0 font-weight-normal">Trial</h4>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>Test the journal and reminder system</li>
+                <li>No </li>
+                <li>Email support</li>
+                <li>Help center access</li>
+              </ul>
             </div>
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>10 users included</li>
-                <li>2 GB of storage</li>
+                <li>Test the journal and reminder system</li>
+                <li>No </li>
                 <li>Email support</li>
                 <li>Help center access</li>
               </ul>
               <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
             </div>
           </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Pro</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-            </div>
+        {% endif %}
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Founder's Monthly Subscription</h4>
           </div>
-          <div class="card mb-4 box-shadow">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Enterprise</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-            </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$2 <small class="text-muted">/ mo</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Unlimited contacts</li>
+              <li>Unlimited journal entries</li>
+              <li>Your memories can be carried on forever</li>
+              <li><br></li>
+            </ul>
+            <button id="price_1IVpLVEAWjMWH1XhtRoR63IS" type="button" class="btn btn-lg btn-block btn-theme">Get started</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Founder's Annual Subscription</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$20 <small class="text-muted">/ year</small></h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Unlimited contacts</li>
+              <li>Unlimited journal entries</li>
+              <li>Your memories can be carried on forever</li>
+              <li>Get a discount for paying a year at a time</li>
+            </ul>
+            {% if customer.status == 'active' %}
+              <form method="POST" action="/subscription/create-customer-portal-session">
+                <button type="submit" class="btn btn-lg btn-block btn-theme">Manage subscription</button>
+              </form>
+            {% else %}
+              <button id="price_1IVpLVEAWjMWH1Xh1LyZ2lx8" type="button" class="btn btn-lg btn-block btn-theme">Get started</button>
+            {% endif %}
           </div>
         </div>
       </div>
-
-
-
-  </div>
-  <div class="row mt-5">
-    <div class="col-lg-12">
-      <form method="POST" action="/subscription/create-customer-portal-session/">
-        <button type="submit" class="mw-100 btn btn-theme">Manage subscription</button>
-      </form>
     </div>
-  </div>
+</div>
+
 {% endblock %}
 
 {% block extra_js %}
