fixed trial card and button

--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -26,19 +26,19 @@
           </div>
         </div>
       {% endfor %}
-      {% if customer.status == "trial" %}
+      {% if customer.status == "trialing" %}
         <div class="card mb-4 box-shadow">
           <div class="card-header">
             <h4 class="my-0 font-weight-normal">Trial</h4>
           </div>
-          <div class="card-body">
+          <div class="card-body d-flex flex-column">
             <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Test the journal and reminder system</li>
               <li>No entries will be sent to contacts</li>
               <li>last 14 days</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+            <button type="button" class="mt-auto btn btn-lg btn-block btn-outline-primary">Current</button>
           </div>
         </div>
       {% endif %}
