--- a/journal_app/static/css/project.css
+++ b/journal_app/static/css/project.css
@@ -90,14 +90,33 @@ body {
   color: white;
   background-color: #3d3d3d;
   border-radius: 10px;
-  border: 10px black;
+  border: 2px solid black;
+  box-shadow: none;
 }
 
-.btn-theme:hover {
+.btn-theme:hover,.btn-theme:active, .btn-theme:focus {
   color: #61ca61;
   background-color: #000000;
   text-decoration: underline;
+  box-shadow: none;
 }
+
+.btn-theme-outline {
+  color: #3d3d3d;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid #3d3d3d;
+  box-shadow: none;
+}
+
+.btn-theme-outline:hover, .btn-theme-outline:active, .btn-theme-outline:focus {
+  color: #61ca61;
+  background-color: #000000;
+  text-decoration: underline;
+  box-shadow: none;
+}
+
+
 
 .btn-lg {
   font-size: 24pt;
