--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -38,7 +38,7 @@
               <li>No entries will be sent to contacts</li>
               <li>last 14 days</li>
             </ul>
-            <button type="button" class="mt-auto btn btn-lg btn-block btn-outline-primary">Current</button>
+            <button type="button" class="mt-auto btn btn-lg btn-block btn-theme-outline">Current</button>
           </div>
         </div>
       {% endif %}
