--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -22,7 +22,11 @@
               <li>{% if subscription.bullet_point_3 %}{{ subscription.bullet_point_3 }}{% else %}<br>{% endif %}</li>
               <li>{% if subscription.bullet_point_4 %}{{ subscription.bullet_point_4 }}{% else %}<br>{% endif %}</li>
             </ul>
-            <button id="{{ subscription.uuid }}" type="button" class="stripe-button mt-auto btn btn-lg btn-block btn-theme" onclick="checkout(this.id)">Get started</button>
+            {% if customer.subscription.uuid == subscription.uuid %}
+              <button id="{{ subscription.uuid }}" type="button" class="stripe-button mt-auto btn btn-lg btn-block btn-theme" onclick="checkout(this.id)">Get started</button>
+            {% else %}
+              <button id="{{ subscription.uuid }}" type="button" class="stripe-button mt-auto btn btn-lg btn-block btn-theme" onclick="checkout(this.id)">Get started</button>
+            {% endif %}
           </div>
         </div>
       {% endfor %}
