--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -24,7 +24,11 @@
             </ul>
             {% if customer.subscription.uuid == subscription.uuid %}
               <a href="{% url "subscription:customer_portal" %}" class="">
-                <button id="{{ subscription.uuid }}" type="submit" class="mt-auto stripe-button btn btn-lg btn-block btn-theme-outline">Manage Subscription</button>
+                <button id="{{ subscription.uuid }}" type="submit" class="mt-auto stripe-button btn btn-lg btn-block btn-theme-outline">Current Subscription</button>
+              </a>
+            {% elif customer.status == 'active' %}
+              <a href="{% url "subscription:customer_portal" %}" class="">
+                <button id="{{ subscription.uuid }}" type="submit" class="mt-auto stripe-button btn btn-lg btn-block btn-theme">Switch to this</button>
               </a>
             {% else %}
               <button id="{{ subscription.uuid }}" type="button" class="stripe-button mt-auto btn btn-lg btn-block btn-theme" onclick="checkout(this.id)">Get started</button>
