--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -1,6 +1,4 @@
-{% load static i18n bootstrap4 %}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery='full' %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
