--- a/journal_app/templates/footer.html
+++ b/journal_app/templates/footer.html
@@ -1,3 +1,3 @@
   <div class="container-fluid text-center text-md-left">
-    <div class="footer-copyright text-center py-3">©2021 Time Capsule Journal LLC</div>
+    <div class="footer-copyright text-center py-3">©{% now 'Y' %} Time Capsule Journal LLC</div>
   </div>
