added "entries still around"

--- a/journal_app/templates/account/email/subscription_cancelled.html
+++ b/journal_app/templates/account/email/subscription_cancelled.html
@@ -10,5 +10,6 @@
 
 {% block content %}
   We are sorry to see you go.  No notifications will be sent to your contacts.<br>
+  Your entries will still be around if you decide to come back!<br>
   If this was a mistake, please feel free to contact us a help@timecapsulejournal.com
 {% endblock %}
