--- a/journal_app/templates/account/email/base_message.html
+++ b/journal_app/templates/account/email/base_message.html
@@ -159,7 +159,7 @@ a[x-apple-data-detectors] {
                       </i></p></td>
                      </tr>
                      <tr style="border-collapse:collapse">
-                      <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:11px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:17px;color:#333333">©{% now 'Y' %} Time Capsule Journal</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:11px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:17px;color:#333333">©{% now 'Y' %} Time Capsule Journal LLC</p></td>
                      </tr>
                    </table></td>
                  </tr>
