--- a/journal_app/templates/journal/pagination.html
+++ b/journal_app/templates/journal/pagination.html
@@ -1,3 +1,5 @@
+{% if page_obj.paginator.num_pages == 1 %}
+{% else %}
 <nav aria-label="Page navigation">
   <ul class="pagination justify-content-center">
     <li class="page-item{% if page_obj.paginator.num_pages == 1 %} disabled{% endif %}">
@@ -45,3 +47,4 @@
     </li>
   </ul>
 </nav>
+{% endif %}
